# ddd_fastapi_template

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  typechecker.py
.github/workflows/: ci-backend.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
env/: .env.example  .env.local.example
scripts/: build.sh  down.sh
src/: alembic.ini  main.py  manage.py
src/alembic/: env.py
src/alembic/versions/: 133826d44912_initial.py  fb7df5dd640a_upgrade.py
src/application/dto/: __init__.py  auth_dto.py  category_dto.py  paging_dto.py  tag_dto.py  token_dto.py  user_dto.py  user_profile_dto.py
src/application/exceptions/: __init__.py  errors.py  exc_response.py  response_code.py
src/application/mapper/: to_entity.py
src/application/mappers/: __init__.py  auth_mapper.py  category_mapper.py  tag_mapper.py  user_profile_mapper.py
src/application/services/: token_service.py
src/application/use_case/: auth_use_case.py  category_usecase.py
src/application/usecases/: __init__.py  auth_usecase.py  category_usecase.py  tag_usecase.py  user_profile_usecase.py
src/auth/application/: use_cases.py
src/auth/domain/: repositories.py
src/auth/infrastructure/: mappers.py
src/core/: exceptions.py  settings.py
src/di/: __init__.py  repository_module.py
src/domain/: repositories.py  value_objects.py
src/infrastructure/: mappers.py
src/presentation/: app.py  urls.py
src/tests/: conftest.py  test_di.py
src/utils/: dynamic_import.py  logger.py  timezone.py
(+111 files in other folders)
