[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auth"
version = "0.1.0"
description = "Authentication service"
authors = [{ name = "Khusan", email = "husandev@mail.ru" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
